# da/mysql/da_models/Server.go
@@ -8,7 +8,7 @@ import (
 type OSType string
 
 const (
-	OSTypeLinux OSType = "os_type_linux"
+	OSTypeLinux         OSType = "os_type_linux"
 	OSTypeWindowsServer OSType = "os_type_windows_server"
 )
 
@@ -17,11 +17,11 @@ type Server struct {
 	UpdatedAt time.Time
 	DeletedAt gorm.DeletedAt `gorm:"index"`
 
-	Host string `gorm:"primaryKey;size:20"`
-	Port uint 	`gorm:"primaryKey"`
+	Host             string `gorm:"primaryKey;index:idx_servers_host_port,priority:1;size:20"`
+	Port             uint   `gorm:"primaryKey;index:idx_servers_host_port,priority:2"`
 	AdminAccountName string `gorm:"index;not null;size:50"`
-	AdminAccountPwd string `gorm:"not null;size:50"`
-	OSType OSType `json:"os_type" gorm:"not null" sql:"type:ENUM('os_type_linux', 'os_type_windows_server')"`
+	AdminAccountPwd  string `gorm:"not null;size:50"`
+	OSType           OSType `json:"os_type" gorm:"not null" sql:"type:ENUM('os_type_linux', 'os_type_windows_server')"`
 
 	Accounts []Account `gorm:"foreignKey:Host,Port"`
 }
